--- a/doc/modules/ROOT/pages/index.adoc
+++ b/doc/modules/ROOT/pages/index.adoc
@@ -1,14 +1,16 @@
 image::kodein-log-logo.svg[KODEIN-LOG, 700]
 
 [.lead]
-*_Kodein-Log_* is a Kotlin/Multiplatform lightweight logging library with a simple API, that works on JVM, Android, JavaScript, iOS, and generally for all Kotlin/Native targets.
+*_Kodein-Log_* is a lightweight Kotlin/Multiplatform logging library with a simple API, that works on JVM, Android, JavaScript, iOS, as well as for all Kotlin/Native targets.
 
 *_Kodein-Log_* allows you to:
+
 - easily setup logging in a Kotlin/Multiplatform
 - simply log what you need on different level
 - avoid carrying about platform specific frontends' implementations
 
 *_Kodein-Log_* is a good choice because:
+
 - it integrates nicely with all the Kotlin/Multiplatform targets
 - it is small and simple to grasp with an easy and understandable API
 
