--- a/doc/modules/core/pages/install.adoc
+++ b/doc/modules/core/pages/install.adoc
@@ -10,6 +10,8 @@ IMPORTANT: *_Canard_* uses the new gradle native dependency model.
 NOTE: Canard supports the following targets: +
 jvm, iosArm32, iosArm64, iosX64, JS, tvosarm64, tvosx64, watchosarm32, watchosarm64, watchosx86, linuxArm32Hfp, linuxMips32, linuxMipsel32, linuxX64, macosX64, mingwX64.
 
+NOTE: Since Kotlin 1.8, legacy backend has been deprecated, thus starting from 0.17.0, Canard is only available for JS-IR.
+
 In your `build.gradle.kts` file, add the Maven Central repository:
 
 [source,kotlin]
